2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* bin/flumotion.in:
	  trigger FLU_DEBUG parsing with debug.init
	* data/glade/admin.glade:
	  change name
	* flumotion/gui/adminclient.py:
	* flumotion/server/component.py:
	* flumotion/server/controller.py:
	* flumotion/utils/__init__.py:
	  add flumotion.utils.log to blacklist
	* flumotion/utils/log.py:
	  

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* flumotion/config/installed.py.in:
	* flumotion/config/uninstalled.py.in:
	  fix locations properly
	* flumotion/gui/adminclient.py:
	  set default icon

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* bin/video-server-admin.in:
	* configure.ac:
	  rename video-server-admin to flumotion-admin

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* data/Makefile.am:
	* data/image/fluendo.png:
	* data/ui/Makefile.am:
	* data/ui/admin.glade:
	* data/ui/spyglass.glade:
	* data/ui/videotest.glade:
	* flumotion/admin/spyglass.py:
	* flumotion/admin/videotest.py:
	* flumotion/gui/adminclient.py:
	  create data/image and data/glade
	  use it everywhere
	  add and set app icon

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/video-server-admin.in:
	* flumotion/components/http/http.py:
	* flumotion/gui/adminclient.py:
	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/controller.py:
	  adding reload on all levels, works now
	* flumotion/twisted/errors.py:
	  add ReloadSyntaxError

2004-09-01  Johan Dahlin  <johan@gnome.org>

	* data/registry/basecomponents.xml:
	* flumotion/components/http/http.py:
	* flumotion/components/http/http.xml:
	* flumotion/components/http/http_gui.py:
	* flumotion/components/passwd/passwd.py:
	* flumotion/gui/adminclient.py:
	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/config.py: